# research-agent

./: .gitignore  LICENSE  README.md  chat.py  pyproject.toml
app/: __main__.py  a2a_auth.py  agent_executor.py  config.py
app/researcher/: actguard_client.py  errors.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
app/services/: embeddings.py  llm.py  scraper.py  search.py
config/: a2a_auth.json
scripts/: sign_request.py
tests/: test_client.py  test_graph.py
